--- a/README.Rmd
+++ b/README.Rmd
@@ -20,7 +20,7 @@ The paper was published under an CC BY 4.0 open-access license and can be cited 
 The documents in the root folder (`/`) perform the basic steps of the data analysis.
 The raw data are in the `/data` folder, the `/stan` folder contains the Stan code required for
 model fitting, and intermediate results and model output are stored in `/output`.
-Visual output generated after running script 06 is stored in `/figures`.
+Visual output is stored in `/figures` (folder is created locally in script 06).
 
 ``` 
 /           top-level scripts:
