--- a/README.Rmd
+++ b/README.Rmd
@@ -14,7 +14,7 @@ The present repository is part of **Hajek, Link et al. (2022)** and contains the
 
 The paper was published under an CC BY 4.0 open-access license and can be cited as follows: 
 
-**Hajek P, Link RM, Nock CA, Bauhus J, Gebauer T, Gessler A, Kovach K, Messier C, Paquette A, Saurer M, Scherer-Lorenzen M, Rose L, Schuldt B (2022).** Mutually inclusive mechanisms of drought-induced tree mortality. _Global Change Biology_ N/N. [doi:10.1111/gcb.16146](https://doi.org/10.1111/gcb.16146)
+**Hajek P, Link RM, Nock CA, Bauhus J, Gebauer T, Gessler A, Kovach K, Messier C, Paquette A, Saurer M, Scherer-Lorenzen M, Rose L, Schuldt B (2022).** Mutually inclusive mechanisms of drought-induced tree mortality. _Global Change Biology_ 28(10): 3365-3378. [doi:10.1111/gcb.16146](https://doi.org/10.1111/gcb.16146)
 
 The raw data are also available as a repository on datadryad.org: [doi:10.5061/dryad.sqv9s4n5t](https://www.doi.org/10.5061/dryad.sqv9s4n5t)
 
